--- a/archivos/html/index.html
+++ b/archivos/html/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<title>Portfolio | Home</title>
 
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="style.css">
 
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,300,500,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700' rel='stylesheet' type='text/css'>
@@ -33,7 +33,7 @@
 					</figure>
 				</section>
 
-				<section class="description item">
+				<section class="dark description item">
 					<p class="subtitle"><span class="number">01.</span> about me</p>
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla quis leo leo. Morbi diam augue, tincidunt eget justo a, congue pharetra dolor. </p>
 				</section>
@@ -85,7 +85,7 @@
 					</ul>
 				</section>
 
-				<section class="title item">
+				<section class="dark title item">
 					<h2>portfolio</h2>
 				</section>
 
